# SLM-Lab

./: .codeclimate.yml  .dockerignore  .dstackignore  .env.example  .gitattributes  .gitignore  .gitmodules  .releaserc.json  ARCHITECTURE.md  ATARI_PREPROCESSING_ANALYSIS.md  BENCHMARK.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GYMNASIUM_MIGRATION.md  Gruntfile.js  LICENSE  M2_CPU_BOTTLENECK_ANALYSIS.md  MIGRATION_CHANGELOG.md  PERFORMANCE_COMPARISON.md  PROFILING_REPORT.md  Q_LOSS_VECTORIZATION_PLAN.md  README.md  TUTORIALS.md  environment-byo.yml  environment-rtx.yml  environment.yml  main.py  package.json  pyproject.toml  run_lab.py  run_lab.py.lprof  run_slm.py  setup.py  slm-lab-minimal
.circleci/: config.yml
.dstack/: README.md  cache-volume.yml  data-volume.yml  dev.yml  fleet-gpu.yml  run-a3c-train.yml  run-cpu-search.yml  run-cpu-train.yml  run-gpu-playground.yml  run-gpu-search.yml  run-gpu-train.yml  run-multigpu-train.yml  run-slm.yml  run.yml  train.yml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  docker.yml  publish.yml  release.yml  ruff.yml  test.yml
config/: a2c_gae_benchmark.json  a2c_gae_cont_benchmark.json  a2c_nstep_benchmark.json  a2c_nstep_cont_benchmark.json  a3c_gae_benchmark.json  ddqn_benchmark.json  ddqn_per_benchmark.json  dqn_benchmark.json  dqn_per_benchmark.json  example_default.json  experiments.json  ppo_benchmark.json  ppo_cont_benchmark.json  tmp.json
docs/: BENCHMARKS.md  BENCHMARK_ENVIRONMENTS.md  CHANGELOG.md  CROSSQ_TRACKER.md  IMPROVEMENTS_ROADMAP.md  PHASE5_OPS.md  PLAYGROUND_PLAN.md  RUNS.md  TORCHARC_BENCHMARKS.md  gpu_tensor_path_design.md  phase5_brax_comparison.md  phase5_spec_research.md
job/: a2c_gae_benchmark.json  a2c_nstep_benchmark.json  a3c_gae_benchmark.json  ac_breakout_search.json  ac_pong_search.json  ac_search.json  atari_benchmark.json  atari_benchmark_adv.json  atari_benchmark_base.json  atari_search.json  cartpole_search.json  cont_benchmark.json  dqn_benchmark.json  mujoco_benchmark.json  ppo_benchmark.json  roboschool_benchmark.json
slm_lab/: __init__.py
slm_lab/agent/: __init__.py  agent.py
slm_lab/cli/: __init__.py  __main__.py  main.py  plot.py  remote.py  sync.py
slm_lab/curriculum/: __init__.py
slm_lab/env/: __init__.py  base.py  gym.py  openai.py  pavlovian.py  pavlovian_mjx.py  pavlovian_mjx_tasks.py  playground.py  playground_warp.py  registration.py  sensorimotor.py  sensorimotor_tasks.py  unity.py  vec_env.py  vec_wrapper.py  wrapper.py  wrappers.py
slm_lab/environment/: __init__.py
slm_lab/evolution/: __init__.py
slm_lab/experiment/: __init__.py  analysis.py  control.py  curriculum.py  data_space.py  eval.py  fitness_std.json  gates.py  hyperdata.py  monitor.py  retro_analysis.py  search.py
slm_lab/lib/: decorator.py  distribution.py  env_config.py  env_var.py  fan.py  hf.py  logger.py  math_util.py  ml_util.py  optimizer.py  perf.py  profiler.py  tf_util.py  torch_profiler.py  util.py  viz.py
slm_lab/notebook/: intro_hydrogen.py  intro_tf.py  (+2 more)
test/: conftest.py  data_test.py  datatest.py  gpu_test.py  nn_test.py  nntest.py  profile_training.py  test_being_embedding.py  test_data.py  test_dist_spec.sh  test_integration.py  test_logger.py  test_memory.py  test_nets.py  test_nn.py  test_pavlovian.py  test_sensorimotor.py  test_util.py
unity_lab/: __init__.py
(+780 files in other folders)
